<resources>
    <string name="app_name">Geniusje</string>

    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="left">Левый</string>
    <string name="right">Правый</string>
    <string name="repeat">Повторить</string>
    <string name="Continue">Продолжить</string>
    <string name="level">Уровень</string>
    <string name="choiceAnswer">Выберите свой вариант</string>
    <string name="colorHint">Здесь будет смешиваться ваш цвет</string>
    <string name="playerChoice">Ваш ход</string>
    <string name="botChoice">Ходит Ваш противник</string>
    <string name="throwCube">Бросить кубик</string>
    <string name="writeScore">Записать</string>
    <string name="skip">Пропустить</string>
    <string name="finish">Закончить</string>
    <string name="find_task">Найти след. вопрос</string>


    <string name="toastExit">Нажмите еще раз для выхода</string>


    <string name="resultDialogTime">Время: </string>
    <string name="resultDialogCorrect">Правильные: </string>
    <string name="resultDialogPercent">Проценты: </string>
    <string name="resultDialogMistakes">Ошибки: </string>
    <string name="resultDialogRepeat">Попробуйте еще(((</string>

    <string name="tagClosed">0</string>
    <string name="tagCellNumber">2</string>
    <string name="tagDescTag">1</string>
    <string name="tagIsCorrect">0</string>
    <string name="tagSudokuX">X</string>
    <string name="tagSudokuY">Y</string>
    <string name="tagSudokuIsChecked">Check_status</string>
    <string name="tagX">X</string>
    <string name="tagY">Y</string>
    <string name="tagIsBomb">0</string>
    <string name="tagPointNumber">0</string>
    <string name="tagAnswerNumber">1</string>
    <string name="hintEditText">Вводи сюда</string>
    <string name="tagCountCell">1</string>
    <string name="tagIsMain">1</string>
    <string name="tagIsCell">1</string>
    <string name="tagIndexWord">1</string>
    <string name="tagIndexSecondWordIfExists">2</string>


    <string name="startDialogWindowForLevel_1">Выбери число, которое больше</string>
    <string name="startDialogWindowForLevel_2">Выбери число , которое меньше</string>
    <string name="startDialogWindowForLevel_3">Выбери правильный ответ</string>
    <string name="startDialogWindowForLevel_4">Укажите какого цвета надпись</string>
    <string name="startDialogWindowForLevel_5">Укажите какой цвет соответствует надписи</string>
    <string name="startDialogWindowForLevel_6">Укажите все числа по возрастанию</string>
    <string name="startDialogWindowForLevel_7">Теперь 4х4)00))0)))</string>
    <string name="startDialogWindowForLevel_8">Ничего нового. Давай 5х5</string>
    <string name="startDialogWindowForLevel_9">Теперь давай в обратном порядке</string>
    <string name="startDialogWindowForLevel_10">Так! А теперь давай проверим твою память. Укажи все совпадающие таблички</string>
    <string name="startDialogWindowForLevel_11">Теперь проверим внимательность! Найдите отличающийся символ</string>
    <string name="startDialogWindowForLevel_12">Слова перемешаны.Найди лишнее слово. Группа остальных указана сверху</string>
    <string name="startDialogWindowForLevel_13">Отвечай на вопросы</string>
    <string name="startDialogWindowForLevel_14">Отвечай еще</string>
    <string name="startDialogWindowForLevel_15">Еще вопросы</string>
    <string name="startDialogWindowForLevel_16">Составь слова из букв этого слова.ДЛИНА СЛОВ:4 буквы</string>
    <string name="startDialogWindowForLevel_17">Реши судоку</string>
    <string name="startDialogWindowForLevel_18">Повтори ритм</string>
    <string name="startDialogWindowForLevel_19">Найди все высвечивающиеся ячейки</string>
    <string name="startDialogWindowForLevel_20">Поиграй в Сапера</string>
    <string name="startDialogWindowForLevel_21">Сыграй в кмн</string>
    <string name="startDialogWindowForLevel_22">Смешай правильно цвет. Подсказка: надо смешать 3 цвета и только</string>
    <string name="startDialogWindowForLevel_23">Реши нонограмму</string>
    <string name="startDialogWindowForLevel_24">Реши игру в 15</string>
    <string name="startDialogWindowForLevel_25">Пройди все поля конем(Конь может ходить только буквой Г)</string>
    <string name="startDialogWindowForLevel_26">Расставь 7 отметок.Нельзя , чтобы было пересечение по вертикали , горизонтали и диагонали</string>
    <string name="startDialogWindowForLevel_27">Сыграй в кости!Надо набрать 36 очков для победы</string>
    <string name="startDialogWindowForLevel_28">Реши кроссворд</string>
    <string name="startDialogWindowForLevel_29">Реши головоломку. Приоритеты АРИФМЕТИЧЕСКИХ ОПЕРАЦИЙ НЕ УЧИТЫВАЮТСЯ</string>
    <string name="startDialogWindowForLevel_30">Пройди IQ тест</string>

    <string name="sudoku_choice_1">1</string>
    <string name="sudoku_choice_2">2</string>
    <string name="sudoku_choice_3">3</string>
    <string name="sudoku_choice_4">4</string>
    <string name="sudoku_choice_5">5</string>
    <string name="sudoku_choice_6">6</string>
    <string name="sudoku_choice_7">7</string>
    <string name="sudoku_choice_8">8</string>
    <string name="sudoku_choice_9">9</string>


</resources>
