<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    tools:context=".Levels.Level_17">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="@dimen/textSizeDefault_24"
                android:textAllCaps="false"
                android:textColor="@color/black_95"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/button_selection"/>

            <TextView
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textSize="@dimen/textSizeDefault_24"
                android:textColor="@color/black_95"
                android:gravity="end"
                android:padding="10dp"
                android:layout_marginStart="@dimen/marginLayoutDefault" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginLayoutDefault"
            android:id="@+id/taskLY"
            android:orientation="vertical"
            >


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/sudokuChoiceLLMarginTop"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/choice_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "1"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_1"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "2"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_2"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:tag = "3"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_3"
                android:gravity="center"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "4"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_4"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black_95"
                android:tag = "5"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_5"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "6"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_6"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "7"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_7"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "8"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_8"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
            <TextView
                android:id="@+id/choice_9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightVerySmall"
                android:layout_weight="1"
                android:gravity="center"
                android:tag = "9"
                android:textSize="@dimen/sudokuChoiceTextSize"
                android:text="@string/sudoku_choice_9"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_marginEnd="5dp"
                android:background="@drawable/answer_style" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>