<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Levels.Level_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selection"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSizeDefault_24" />

            <TextView
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginLayoutDefault"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/level"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSizeDefault_24" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLayoutDefault"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_style"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:textColor="@color/black_95"
                android:textSize="45dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/blockAnswerHeightMedium"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginLayoutDefault"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_word"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:layout_marginEnd="5dp"
                android:hint="@string/hintEditText"
                android:layout_weight="1"
                android:background="@drawable/answer_style"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:textColor="@color/black_95" />

            <TextView
                android:id="@+id/founded_words"
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightMedium"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:layout_weight="1"
                android:background="@drawable/answer_style"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:textColor="@color/black_95" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/blockAnswerMarginTopVerySmall"
                android:background="@drawable/answer_style_checked"
                android:fontFamily="@font/black_ops_one"
                android:text="Check"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>