<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Levels.Level_30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selection"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSizeDefault_24" />

            <TextView
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginLayoutDefault"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/level"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSizeDefault_24" />

        </LinearLayout>




        <LinearLayout
            android:id="@+id/taskLY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginLayoutMedium"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/blockAnswerHeightDefault"
                    android:src="@drawable/task_1"
                    android:gravity="center"
                    android:tag="null"
                    android:layout_weight="1"
                    android:id="@+id/botChoice"
                    android:textColor="@color/black_95"
                    android:fontFamily="@font/black_ops_one"
                    android:background="@drawable/answer_style" />
            </LinearLayout>
                
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginLayoutMedium"
            android:orientation="horizontal"
            android:id="@+id/answerLLtop">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:gravity="center"
                android:tag="0"
                android:layout_weight="1"
                android:src="@drawable/answer_1_3"
                android:id="@+id/answer_1"
                android:layout_marginEnd="@dimen/blockAnswerMarginTopVerySmall"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:background="@drawable/answer_style" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:gravity="center"
                android:tag="1"
                android:id="@+id/answer_2"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/blockAnswerMarginTopVerySmall"
                android:src="@drawable/answer_1_3"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:background="@drawable/answer_style" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:gravity="center"
                android:id="@+id/answer_3"
                android:tag="2"
                android:layout_weight="1"
                android:src="@drawable/answer_1_3"
                android:layout_marginEnd="@dimen/blockAnswerMarginTopVerySmall"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:background="@drawable/answer_style" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginLayoutDefault"
            android:orientation="horizontal"
            android:id="@+id/answerLLbottom">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:gravity="center"
                android:tag="0"
                android:layout_weight="1"
                android:src="@drawable/answer_1_3"
                android:id="@+id/answer_4"
                android:layout_marginEnd="@dimen/blockAnswerMarginTopVerySmall"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:background="@drawable/answer_style" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:gravity="center"
                android:tag="1"
                android:id="@+id/answer_5"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/blockAnswerMarginTopVerySmall"
                android:src="@drawable/answer_1_3"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:background="@drawable/answer_style" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/blockAnswerHeightSmall"
                android:gravity="center"
                android:id="@+id/answer_6"
                android:tag="2"
                android:layout_weight="1"
                android:src="@drawable/answer_1_3"
                android:layout_marginEnd="@dimen/blockAnswerMarginTopVerySmall"
                android:textColor="@color/black_95"
                android:fontFamily="@font/black_ops_one"
                android:background="@drawable/answer_style" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginLayoutMedium"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="left">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selection"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/find_task"
                android:textAllCaps="false"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSize_18" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center">
            <Button


                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/button_selection"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSize_18" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="right">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selection"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textColor="@color/black_95"
                android:textSize="@dimen/textSize_18" />
                </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>